# leetcode

./: .env  .gitignore  Makefile  build.gradle  data.csv
c_lang/: CMakeUserPresets.json  run.sh
c_lang/src/: TwoSum.cpp
learn-crypto/: Cargo.toml
learn-crypto/src/: curve_operations.rs  eth_wallet.rs  inverse.rs  lib.rs  main.rs  utils.rs
rust_lang/: Cargo.toml
rust_lang/src/: leetcode.rs  lib.rs  list_demo.rs  main.rs  solutions.rs
rust_lang/src/blockchain/: block.rs  blockchain.rs  hashable.rs
rust_lang/src/leetcode/: easy.rs  hard.rs  medium.rs
rust_lang/src/leetcode/easy/: palindrome_number.rs  valid_anagram.rs  valid_parentheses.rs
rust_lang/src/leetcode/hard/: sudoku_solver.rs
rust_lang/src/leetcode/medium/: group_anagrams.rs  valid_sudoku.rs
rust_lang/src/solutions/: twosum.rs  valid_anagram.rs
smart-contract/: z.json
smart-contract/contract/src/: main.rs
smart-contract/tests/src/: integration_tests.rs
smart-contract/tests/wasm/: contract.wasm
src/main/java/org/tiktzuki/jni/: HelloWorld.java  JListDemo.java
src/main/java/org/tiktzuki/leetcode/: LeetcodeApplication.java
src/main/java/org/tiktzuki/leetcode/easy/: FindNonDuplicateNumberInstances.java  Palindrome.java  Pangram.java  ReverseVowels.java  ShortestDistance.java  SquaringSortedArray.java  TwoSum.java  ValidAnagram.java  ValidPalindromeII.java  ValidParentheses.java
src/main/java/org/tiktzuki/leetcode/hard/: BestPokerHand.java  Sudoku.kt
src/main/resources/: logback.xml
src/test/java/org/tiktzuki/leetcode/: LeetcodeApplicationTests.java
(+41 files in other folders)
