[package]
name = "learn-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = "0.5.1"
elliptic-curve = "0.13.8"
hex = "0.4.3"
k256 = { version = "0.13.4", features = ["ecdh"] }
secp256k1 = { version = "0.29.1", features = ["rand"] }
rand_core = "0.6.4"
sha2 = "0.10.8"
[dev-dependencies]
rstest = "0.23.0"
parameterized = "2.0.0"
[lib]
crate-type = ["cdylib"]
