[package]
name = "learn-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = "0.5.1"
elliptic-curve = "0.13.8"
hex = "0.4.3"
secp256k1 = { version = "0.20.3", features = ["rand",] }
rand_core = "0.6.4"
web3 = "0.17.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
log = "0.4.22"
rand_jitter = "0.4.0"
dotenv = "0.15.0"
tokio = "1.40.0"
[dev-dependencies]
rstest = "0.23.0"
parameterized = "2.0.0"
[lib]
crate-type = ["cdylib"]
