[package]
name = "rust_lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
crypto-hash = "0.3.4"
hex = "0.4.3"
log = "0.4.20"
once_cell = "1.18.0"
pretty_env_logger = "0.5.0"
serde = "1.0.189"
serde_json = "1.0.107"
